--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -10,7 +10,7 @@
         .hero-section {
             position: relative;
             height: 70vh;
-            background: url('../images/about/cover.jpg') no-repeat center center fixed;
+            background: url('../images/about/cover.png') no-repeat center center fixed;
             background-size: cover;
             background-position: center;
             display: flex;
