--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -11,9 +11,6 @@
         .hero-section {
             position: relative;
             height: 70vh;
-            background: url('../images/about/cover.png') no-repeat center center fixed;
-            background-size: cover;
-            background-position: center;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -23,23 +20,25 @@
             margin-bottom: 50px;
         }
 
-        .hero-section::after {
-            content: '';
+        /* Hero image now in HTML */
+        .hero-img {
             position: absolute;
             top: 0;
             left: 0;
-            right: 0;
-            bottom: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: 1;
         }
 
         .hero-content {
+            z-index: 3;
             position: relative;
             justify-content: center;
             background: rgba(56, 56, 56, 0.6);
             border-radius: 15px;
 
             padding: 0 60px 0 60px;
-            z-index: 2;
             backdrop-filter: blur(1.1px);
             box-shadow: 0 20px 50px rgba(35, 35, 35, 0.5);
         }
