--- a/assets/css/careers.css
+++ b/assets/css/careers.css
@@ -9,38 +9,38 @@
         }
 
         .hero-section {
-          position: relative;
-          height: 70vh;
-          background: url('../images/careers.avif') no-repeat center center fixed;
-          background-size: cover;
-          background-position: center;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          text-align: center;
-          color: white;
-          overflow: hidden;
-          margin-bottom: 50px;
+            position: relative;
+            height: 70vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            color: white;
+            overflow: hidden;
+            margin-bottom: 50px;
         }
 
-        .hero-section::after {
-          content: '';
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
+        /* Hero image now in HTML */
+        .hero-img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: 1;
         }
 
         .hero-content {
-          position: relative;
-          justify-content: center;
-          background: rgba(56, 56, 56, 0.6);
-          border-radius: 15px;
-          padding: 0 60px 0 60px;
-          z-index: 2;
-          backdrop-filter: blur(1.1px);
-          box-shadow: 0 20px 50px rgba(35, 35, 35, 0.5);
+            z-index: 3;
+            position: relative;
+            justify-content: center;
+            background: rgba(56, 56, 56, 0.6);
+            border-radius: 15px;
+
+            padding: 0 60px 0 60px;
+            backdrop-filter: blur(1.1px);
+            box-shadow: 0 20px 50px rgba(35, 35, 35, 0.5);
         }
 
         .hero-content h1 {
